[project]
name = "bluesnap"
version = "1.2025.4.6"
authors = [
  { name = "Alon Diamant", email = "alon@mayple.com" }
]
description = "A Python 3 module to interact with the Bluesnap API."
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/mayple/bluesnap"
Issues = "https://github.com/mayple/bluesnap/issues"

[build-system]
requires = ["setuptools >= 75.3.2"]
build-backend = "setuptools.build_meta"
